--- a/ZTW_2011/config/database.yml
+++ b/ZTW_2011/config/database.yml
@@ -1,26 +1,14 @@
 development:
-      host: localhost
-      adapter: derby
-      database: sample
-      port: 1527
-      username: app
-      password: app
+      adapter: sqlite3
+      database: db\PizzeriaDev.db
 
 # Warning: The database defined as 'test' will be erased and
 # re-generated from your development database when you run 'rake'.
 # Do not set this db to the same as development or production.
 test:
-      host: localhost
-      adapter: derby
-      database: sample
-      port: 1527
-      username: app
-      password: app
+      adapter: sqlite3
+      database: db\PizzeriaTest.db
 
 production:
-      host: localhost
-      adapter: derby
-      database: sample
-      port: 1527
-      username: app
-      password: app
+      adapter: sqlite3
+      database: db\PizzeriaProd.db
