--- a/ZTW_2011/nbproject/project.properties
+++ b/ZTW_2011/nbproject/project.properties
@@ -1,3 +1,6 @@
+javac.classpath=
 platform.active=Ruby
 rails.port=3000
+rails.servertype=WEBRICK
+required.gems=abstract, actionmailer, actionpack, activemodel, activerecord, activeresource, activesupport, arel, bouncy-castle-java, builder, bundler, erubis, i18n, jruby-jars, jruby-openssl, jruby-rack, mail, mime-types, polyglot, rack, rack-mount, rack-test, railties, rubyzip, sqlite3-ruby, thor, treetop, tzinfo, warbler
 source.encoding=UTF-8
